force-app/main/default/objects/Case/fields/YearCreated__c.field-meta.xml
<CustomField>
    <fullName>YearCreated__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Created</label>
    <type>Text</type>
</CustomField>