force-app/main/default/objects/Case/fields/YearMonthCreated__c.field-meta.xml
<CustomField>
    <fullName>YearMonthCreated__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate )))
+&quot;-&quot;
+LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))),2,&quot;0&quot;)</formula>
    <label>YearMonth Created</label>
    <type>Text</type>
</CustomField>