force-app/main/default/objects/Case/fields/YearMonthResolved__c.field-meta.xml
<CustomField>
    <fullName>YearMonthResolved__c</fullName>
    <description>Indicates the Year Month when Case is Resolved</description>
    <formula>TEXT(YEAR(DATEVALUE( Nullvalue(CaseResolvedDate__c, ClosedDate) )))
+&quot;-&quot;
+LPAD(TEXT(MONTH(DATEVALUE(Nullvalue(CaseResolvedDate__c, ClosedDate)))),2,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YearMonth Resolved</label>
    <type>Text</type>
</CustomField>