force-app/main/default/objects/Case/fields/YearResolved__c.field-meta.xml
<CustomField>
    <fullName>YearResolved__c</fullName>
    <label>Year Resolved</label>
    <length>4</length>
    <type>Text</type>
</CustomField>