force-app/main/default/objects/Case/recordTypes/Building_Permit.recordType-meta.xml
<RecordType>
    <fullName>Building_Permit</fullName>
    <active>false</active>
    <businessProcess>Building Permit Process</businessProcess>
    <label>Building Permit</label>
</RecordType>