force-app/main/default/objects/Case/recordTypes/CS_Case.recordType-meta.xml
<RecordType>
    <fullName>CS_Case</fullName>
    <active>true</active>
    <businessProcess>Customer Service Process</businessProcess>
    <description>Case Record Type for Customer Services</description>
    <label>Customer Service Case</label>
</RecordType>