force-app/main/default/objects/Case/recordTypes/Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>Customer_Service</fullName>
    <active>false</active>
    <businessProcess>Customer Service</businessProcess>
    <label>Customer Service</label>
</RecordType>