force-app/main/default/objects/Case/recordTypes/FAC_Case.recordType-meta.xml
<RecordType>
    <fullName>FAC_Case</fullName>
    <active>true</active>
    <businessProcess>Production Process</businessProcess>
    <description>Case Record Type for Production</description>
    <label>Production Case</label>
</RecordType>