force-app/main/default/objects/Case/recordTypes/ICT_Case.recordType-meta.xml
<RecordType>
    <fullName>ICT_Case</fullName>
    <active>true</active>
    <businessProcess>ICT Support Process</businessProcess>
    <description>Case Record Type for ICT Support</description>
    <label>ICT Support Case</label>
</RecordType>