force-app/main/default/objects/Case/recordTypes/INST_Case.recordType-meta.xml
<RecordType>
    <fullName>INST_Case</fullName>
    <active>true</active>
    <businessProcess>Installation Process</businessProcess>
    <description>Case Record Type for Installation Related Issues</description>
    <label>Installation Case</label>
</RecordType>