force-app/main/default/objects/Case/recordTypes/Internal_IT.recordType-meta.xml
<RecordType>
    <fullName>Internal_IT</fullName>
    <active>false</active>
    <businessProcess>Internal IT Queue</businessProcess>
    <description>Ability to create Internal IT case when flow error appears.</description>
    <label>Internal IT</label>
</RecordType>