force-app/main/default/objects/Case/recordTypes/LOG_Case.recordType-meta.xml
<RecordType>
    <fullName>LOG_Case</fullName>
    <active>true</active>
    <businessProcess>Logistics Process</businessProcess>
    <description>Case Record Type for Logistics</description>
    <label>Logistics Case</label>
</RecordType>