force-app/main/default/objects/Case/recordTypes/Lumon_ICT_Support.recordType-meta.xml
<RecordType>
    <fullName>Lumon_ICT_Support</fullName>
    <active>true</active>
    <businessProcess>ICT Support</businessProcess>
    <description>&quot;Freshdesk&quot; 2nd Level IT Support</description>
    <label>ICT Support</label>
</RecordType>