force-app/main/default/objects/Case/recordTypes/PERM_Case.recordType-meta.xml
<RecordType>
    <fullName>PERM_Case</fullName>
    <active>true</active>
    <businessProcess>Permit Application Process</businessProcess>
    <description>Case Record Type for Permit Applications</description>
    <label>Permit Application Case</label>
</RecordType>