force-app/main/default/objects/Case/recordTypes/QUAL_Case.recordType-meta.xml
<RecordType>
    <fullName>QUAL_Case</fullName>
    <active>true</active>
    <businessProcess>Product Quality Process</businessProcess>
    <description>Case Record Type for Quality Events</description>
    <label>Process Quality Case</label>
</RecordType>