force-app/main/default/objects/Case/recordTypes/Quality_Event.recordType-meta.xml
<RecordType>
    <fullName>Quality_Event</fullName>
    <active>false</active>
    <businessProcess>Quality Event</businessProcess>
    <description>Case record type for quality event (both work stop &amp; work continues)</description>
    <label>Quality Event</label>
</RecordType>