force-app/main/default/objects/Case/recordTypes/RECL_Case.recordType-meta.xml
<RecordType>
    <fullName>RECL_Case</fullName>
    <active>true</active>
    <businessProcess>Reclamation Process</businessProcess>
    <description>Case Record Type for Reclamations</description>
    <label>Reclamation Case</label>
</RecordType>