force-app/main/default/objects/Case/recordTypes/Reclamation_Order.recordType-meta.xml
<RecordType>
    <fullName>Reclamation_Order</fullName>
    <active>false</active>
    <businessProcess>Reclamation Order</businessProcess>
    <description>Reclamation order case record type to handle installer logged reclamation orders</description>
    <label>Reclamation Order</label>
</RecordType>