force-app/main/default/objects/Case/recordTypes/SF_Case.recordType-meta.xml
<RecordType>
    <fullName>SF_Case</fullName>
    <active>true</active>
    <businessProcess>Salesforce Support Process</businessProcess>
    <description>Case Record Type for Salesforce Support</description>
    <label>Salesforce Support Case</label>
</RecordType>