force-app/main/default/objects/Case/recordTypes/SPEC_Case.recordType-meta.xml
<RecordType>
    <fullName>SPEC_Case</fullName>
    <active>true</active>
    <businessProcess>Special Order Process</businessProcess>
    <description>Case Record Type for Special Orders</description>
    <label>Special Order Case</label>
</RecordType>