force-app/main/default/objects/Case/recordTypes/Special_Order_Handling.recordType-meta.xml
<RecordType>
    <fullName>Special_Order_Handling</fullName>
    <active>false</active>
    <businessProcess>Special Order Handling</businessProcess>
    <description>Special Order Record type</description>
    <label>Special Order Handling</label>
</RecordType>