force-app/main/default/objects/Case/recordTypes/Technical_Support.recordType-meta.xml
<RecordType>
    <fullName>Technical_Support</fullName>
    <active>false</active>
    <businessProcess>Technical Support</businessProcess>
    <description>Any Technical support query created manually</description>
    <label>Technical Support</label>
</RecordType>