force-app/main/default/objects/Case/recordTypes/TS_Case.recordType-meta.xml
<RecordType>
    <fullName>TS_Case</fullName>
    <active>true</active>
    <businessProcess>Technical Support Process</businessProcess>
    <description>Case Record Type for Technical Support</description>
    <label>Technical Support Case</label>
</RecordType>