force-app/main/default/objects/Case/recordTypes/WEB_Case.recordType-meta.xml
<RecordType>
    <fullName>WEB_Case</fullName>
    <active>true</active>
    <businessProcess>Customer Service Process</businessProcess>
    <description>Case Record Type for Webshop Assistance</description>
    <label>Webshop Case</label>
</RecordType>