force-app/main/default/objects/Case/listViews/All_Cases_with_Details.listView-meta.xml
<ListView>
    <fullName>All_Cases_with_Details</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CaseGroup__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CaseCategory__c</columns>
    <columns>CaseType__c</columns>
    <columns>CaseSubType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases with Details</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>