force-app/main/default/objects/Case/listViews/All_CS_Finland_Cases.listView-meta.xml
<ListView>
    <fullName>All_CS_Finland_Cases</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.CS_Case</value>
    </filters>
    <label>All CS Finland Cases</label>
    <sharedTo>
        <group>CS_Finland</group>
    </sharedTo>
</ListView>