force-app/main/default/objects/Case/listViews/All_ICT_Cases.listView-meta.xml
<ListView>
    <fullName>All_ICT_Cases</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012JW000001Z7Si,Case.ICT_Case</value>
    </filters>
    <label>All ICT Support Cases</label>
    <sharedTo>
        <group>Admins</group>
        <group>ICT_Global</group>
        <group>ICT_Support</group>
    </sharedTo>
</ListView>