force-app/main/default/objects/Case/listViews/All_ICT_Support_Cases.listView-meta.xml
<ListView>
    <fullName>All_ICT_Support_Cases</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CLOSED</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IT_Support_Category__c</field>
        <operation>equals</operation>
        <value>IT Support</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <label>All ICT Support Cases</label>
    <sharedTo>
        <group>Admins</group>
        <group>ICT_Support_Finland</group>
    </sharedTo>
</ListView>