force-app/main/default/objects/Case/listViews/All_INST_Cases.listView-meta.xml
<ListView>
    <fullName>All_INST_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CaseGroup__c</columns>
    <columns>CaseType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.INST_Case</value>
    </filters>
    <label>All Installation Cases</label>
    <sharedTo>
        <group>Admins</group>
        <group>Customer_Services</group>
        <group>ICT_Support</group>
        <group>Installation_Managers</group>
        <group>Technical_Support</group>
    </sharedTo>
</ListView>