force-app/main/default/objects/Case/listViews/All_Lumon_Finland_CS_Cases.listView-meta.xml
<ListView>
    <fullName>All_Lumon_Finland_CS_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CaseGroup__c</columns>
    <columns>CaseType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.CS_Case</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Merged</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Resolved,Closed</value>
    </filters>
    <filters>
        <field>CaseGroup__c</field>
        <operation>equals</operation>
        <value>CS_Finland</value>
    </filters>
    <label>All Lumon Finland CS Cases</label>
    <sharedTo>
        <group>CS_Finland</group>
    </sharedTo>
</ListView>