force-app/main/default/objects/Case/listViews/All_Open_ICT_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_ICT_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Lumon_ICT_Support,Case.ICT_Case</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Resolved,Closed</value>
    </filters>
    <label>All Open ICT Cases</label>
    <sharedTo>
        <group>ICT_Support</group>
    </sharedTo>
</ListView>